# Django_setting_init

./: README.md  pyproject.toml
