[tool.poetry]
name = "test"
version = "0.1.0"
description = "depscription"
authors = ["simseulnyang <happysseul627@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
Django = "^4.2.7"
djangorestframework = "^3.14.0"
djrestframework-simplejwt = "^1.22.0"
pre-commit = "^3.5.0"
django-environ = "^0.11.2"
drf-yasg = "^1.21.7"
Pillow = "^10.1.0"

[tool.black]
line-length = 88


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
